setup/resources/templates/gogs-postgresql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The Gogs server's http port
    openshift.io/generated-by: gitops-workshop
    service.alpha.openshift.io/dependencies: '[{"name":"gogs-postgresql","namespace":"gogs","kind":"Service"}]'    
  name: gogs-postgresql
  namespace: gogs
spec:
  selector:
    app: gogs-postgresql
  ports:
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
