setup/resources/templates/gogs-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gogs
  namespace: gogs
spec:
  path: /
  to:
    kind: Service
    name: gogs
  port:
    targetPort: 3000
